add new endpoint for user registration complition
